--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -6,6 +6,7 @@ echo "cl_csm_debug_vis_hi_range 1 is default value"
 echo "cl_csm_max_shadow_dist -1 is default value"
 echo "cl_csm_viz_numplanes -1 is default value"
 echo "cl_csm_viz_polyhedron_quad_size 131072 is default value"
+echo "cl_dlight_manager_min_fps 30 is default value"
 
 autoaim_max_deflect "0"
 autoaim_max_dist "0"
@@ -56,3 +57,28 @@ cl_csm_viz_numplanes "999999999999999999999999999"
 cl_csm_viz_polyhedron_quad_size "524288"
 cl_csm_world_shadows "1"
 cl_csm_xlat_continuity "1"
+cl_customsounds "0"
+cl_dbg_music_tracks "0"
+cl_detaildist "999999999"
+cl_detailfade "999999999"
+cl_disablemotdhtml "1"
+cl_dlight_manager_enable "1"
+cl_dlight_manager_max_fps "999"
+cl_dlight_manager_min_fps "1"
+cl_ejectbrass "1"
+cl_generic_gib_ideal_count "999999999"
+cl_generic_gib_max_limit "999999999"
+cl_gluon_awesome_dlight "1"
+cl_hpcharg_light_on "1"
+cl_hpcharg_light_range "999999999"
+cl_hudhint_sound "0"
+cl_impacteffects "1"
+cl_impacteffects_limit_exit "999999999"
+cl_impacteffects_limit_general "999999999"
+cl_impacteffects_limit_water "999999999"
+cl_intbarrel_dlights_mode "3"
+cl_intbarrel_dlights_range "999999999"
+cl_interp "0.1"
+cl_interp_ratio "1"
+cl_jiggle_bone_framerate_cutoff "1"
+cl_localnetworkbackdoor "0"
