--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -82,3 +82,41 @@ cl_interp "0.1"
 cl_interp_ratio "1"
 cl_jiggle_bone_framerate_cutoff "1"
 cl_localnetworkbackdoor "0"
+cl_maxrenderable_dist "999999999"
+cl_mdldetailfx_enable "1"
+cl_mdldetailfx_enable_hands "1"
+cl_mdldetailfx_universal_hands "1"
+cl_new_impact_effects "0"
+cl_npc_gib_ideal_count "999999999"
+cl_npc_gib_max_limit "999999999"
+cl_phys_maxticks "128"
+cl_player_gib_ideal_count "999999999"
+cl_player_gib_max_limit "999999999"
+cl_playerspraydisable "1"
+cl_ragdoll_collide "1"
+cl_ragdoll_max "999999999"
+cl_ragdoll_max_fps "999"
+cl_ragdoll_max_generic "999999999"
+cl_ragdoll_max_npc "999999999"
+cl_ragdoll_max_player "999999999"
+cl_ragdoll_min_fps "1"
+cl_ragdoll_physics_enable "1"
+cl_shadowtextureoverlaysize "8192"
+cl_show_splashes "1"
+cl_showhelp "0"
+cl_showpluginmessages "0"
+cl_smooth "0"
+cl_smoothtime "0.0"
+cl_threaded_client_leaf_system "1"
+cl_tracers "1"
+cl_updaterate "128"
+cl_xort_light_on "1"
+cl_xort_light_range "999999999"
+con_enable "1"
+datacachesize "1024"
+dsp_enhance_stereo "0"
+dsp_slow_cpu "1"
+fog_enable "1"
+fog_enable_water_fog "1"
+fog_enableskybox "1"
+fps_max "999"
