--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -116,7 +116,172 @@ con_enable "1"
 datacachesize "1024"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
+engine_no_focus_sleep "0"
 fog_enable "1"
 fog_enable_water_fog "1"
 fog_enableskybox "1"
 fps_max "999"
+func_break_max_pieces "999999999"
+joy_active "0"
+joystick "0"
+m_customaccel "0"
+m_filter "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
+m_mousespeed "0"
+m_rawinput "1"
+mat_aaquality "4"
+mat_antialias "8"
+mat_bufferprimitives "1"
+mat_bumpmap "1"
+mat_clipz "0"
+mat_colorcorrection "1"
+mat_colcorrection_disableentities "0"
+mat_camerarendertargetoverlaysize "8192"
+mat_disable_bloom "0"
+mat_disable_fancy_blending "0"
+mat_disable_lightwarp "0"
+mat_envmapsize "8192"
+mat_envmaptgasize "8192"
+mat_forceaniso "16"
+mat_forcemanagedtextureintohardware "0"
+mat_framebuffercopyoverlaysize "8192"
+mat_fxaa_enabled "0"
+mat_geiger_noise_enable "1"
+mat_hdr_level "2"
+mat_levelflush "1"
+mat_max_worldmesh_vertices "999999999"
+mat_maxframelatency "0"
+mat_mipmaptextures "1"
+mat_motion_blur_enabled "0"
+mat_parallaxmap "1"
+mat_phong "1"
+mat_picmip "-10"
+mat_postprocess_x "16"
+mat_postprocess_y "16"
+mat_queue_mode "2"
+mat_reducefillrate "0"
+mat_reduceparticles "0"
+mat_software_aa_quality "0"
+mat_software_aa_strength_vgui "0"
+mat_software_aa_strength "0"
+mat_specular "1"
+mat_texture_reload_frame_swap_workaround "0"
+mat_tonemapping_occlusion_use_stencil "1"
+mat_trilinear "1"
+mat_vsync "0"
+mat_wateroverlaysize "8192"
+mod_load_anims_async "1"
+mod_load_mesh_async "1"
+mod_load_vcollide_async "1"
+mod_forcetouchdata "1"
+mod_forcedata "1"
+mod_touchalldata "1"
+mod_offline_hdr_switch "1"
+mp_decals "4096"
+net_compresspackets_minsize "1260"
+net_maxfragments "1260"
+net_maxroutable "1260"
+net_maxpacketdrop "0"
+name "TyranT🜨"
+r_avglight "999999999999999999999999999"
+r_cheapwaterend "99999999999999999999"
+r_cheapwaterstart "99999999999999999999"
+r_decals "4096"
+r_decalstaticprops "1"
+r_drawdetailprops "1"
+r_drawflecks "1"
+r_drawtracers_firstperson "0"
+r_eyegloss "1"
+r_eyemove "1"
+r_eyes "1"
+r_fastzreject "0"
+r_ForceWaterLeaf "1"
+r_frustumcullworld "0"
+r_glint_procedural "0"
+r_hunkalloclightmaps "1"
+r_lightcache_zbuffercache "1"
+r_flashlightdepthtexture "1"
+r_flashlightrender "1"
+r_flashlightmodels "1"
+r_flashlightculldepth "1"
+r_flashlightscissor "1"
+r_flex "1"
+r_lightcache_zbuffercache "1"
+r_lod "0"
+r_maxdlights "128"
+r_maxmodeldecal "128"
+r_maxnewsamples "9"
+r_maxsampledist "999999999999999999999999999"
+r_minnewsamples "9"
+r_norefresh "1"
+r_novis "0"
+r_occludermincount "1"
+r_occlusion "1"
+r_PhysPropStaticLighting "1"
+r_pixelfog "1"
+r_propsmaxdist "999999999999999999999999999"
+r_queued_decals "0"
+r_queued_post_processing "0"
+r_queued_ropes "1"
+r_radiosity "2"
+r_renderoverlayfragment "1"
+r_shadowmaxrendered "128"
+r_shadowrendertotexture "1"
+r_shader_srgb "0"
+r_shadows "1"
+r_staticprop_lod "0"
+r_teeth "1"
+r_threaded_client_shadow_manager "1"
+r_threaded_particles "1"
+r_threaded_renderables "1"
+r_waterdrawreflection "1"
+r_waterdrawrefraction "1"
+r_waterforceexpensive "1"
+r_waterforcereflectentities "1"
+r_worldlightmin "0.0002"
+r_worldlights "64"
+rate "1048576"
+rope_collide "1"
+rope_smooth "0"
+rope_shake "0"
+rope_subdiv "999999999999999999999999999"
+rope_wind_dist "999999999999999999999999999"
+sensitivity "4"
+snd_async_fullyasync "1"
+snd_mixahead "0.045"
+snd_pitchquality "1"
+snd_defer_trace "0"
+snd_disable_mixer_duck "0"
+snd_noextraupdate "1"
+snd_async_spew_blocking "0"
+snd_surround_speakers "0"
+sp_decals "4096"
+sv_allowdownload "0"
+sv_allowupload "0"
+sv_allow_voice_from_file "0"
+sv_allow_votes "0"
+sv_allow_wait_command "0"
+sv_forcepreload "1"
+sv_lan "1"
+sv_logdownloadlist "0"
+sv_logecho "0"
+sv_logfile "0"
+sv_maxcmdrate "128"
+sv_maxrate "0"
+sv_maxupdaterate "128"
+sv_mincmdrate "128"
+sv_minrate "1048576"
+sv_minupdaterate "128"
+sv_npc_talker_maxdist "999999999999999999999999999"
+sv_rcon_log "0"
+sv_unlockedchapters "99"
+sv_vote_allow_spectators "0"
+sv_client_max_interp_ratio "1"
+sv_client_min_interp_ratio "1"
+sv_disablefreezecam "1"
+tv_enable "0"
+windows_speaker_config "0"
+
+bind mwheelup "+jump"
+bind mwheeldown "+jump"
