--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -178,12 +178,17 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
+mp_allowspectators "0"
 mp_decals "4096"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
+net_queued_packet_thread "1"
 name "TyranT🜨"
+props_break_max_pieces "9999999999"
+props_break_max_pieces_perframe "999999999"
+r_3dsky "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
@@ -198,6 +203,7 @@ r_eyes "1"
 r_fastzreject "0"
 r_ForceWaterLeaf "1"
 r_frustumcullworld "0"
+r_gbuffer_disable "0"
 r_glint_procedural "0"
 r_hunkalloclightmaps "1"
 r_lightcache_zbuffercache "1"
@@ -243,7 +249,7 @@ r_worldlightmin "0.0002"
 r_worldlights "64"
 rate "1048576"
 rope_collide "1"
-rope_smooth "0"
+rope_smooth "1"
 rope_shake "0"
 rope_subdiv "999999999999999999999999999"
 rope_wind_dist "999999999999999999999999999"
