--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -280,6 +280,12 @@ sv_mincmdrate "128"
 sv_minrate "1048576"
 sv_minupdaterate "128"
 sv_npc_talker_maxdist "999999999999999999999999999"
+sv_ragdoll_max "999999999"
+sv_ragdoll_max_fps "999"
+sv_ragdoll_max_generic "999999999"
+sv_ragdoll_max_npc "999999999"
+sv_ragdoll_max_player "999999999"
+sv_ragdoll_min_fps "1"
 sv_rcon_log "0"
 sv_unlockedchapters "99"
 sv_vote_allow_spectators "0"
