--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -8,6 +8,8 @@ echo "cl_csm_viz_numplanes -1 is default value"
 echo "cl_csm_viz_polyhedron_quad_size 131072 is default value"
 echo "cl_dlight_manager_min_fps 30 is default value"
 
+exec config.cfg
+
 autoaim_max_deflect "0"
 autoaim_max_dist "0"
 autoaim_unlock_target "0"
