--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -7,6 +7,10 @@ echo "cl_csm_max_shadow_dist -1 is default value"
 echo "cl_csm_viz_numplanes -1 is default value"
 echo "cl_csm_viz_polyhedron_quad_size 131072 is default value"
 echo "cl_dlight_manager_min_fps 30 is default value"
+echo "nr_debug_cull_deferred_code_lights_via_bsp 1 is default value"
+echo "nr_debug_cull_deferred_lights 1 is default value"
+echo "nr_gbuffer_for_secondary_cams_quality 5 is INSANE value, 6 is DevOnly(UnCompressed)"
+echo "nr_lights_quality 5 is INSANE value, 6 is DevOnly(UnCompressed)"
 
 exec config.cfg
 
@@ -188,6 +192,16 @@ net_maxroutable "1260"
 net_maxpacketdrop "0"
 net_queued_packet_thread "1"
 name "TyranT🜨"
+nr_allow_hammer_nerfs "0"
+nr_allow_hammer_nerfs_4ways "0"
+nr_debug_cull_deferred_code_lights_via_bsp "0"
+nr_debug_cull_deferred_lights "0"
+nr_gbuffer_for_reflection_enabled "1"
+nr_gbuffer_for_refraction_enabled "1"
+nr_gbuffer_for_secondary_cams_enabled "1"
+nr_gbuffer_for_secondary_cams_quality "6"
+nr_lights_quality "6"
+
 props_break_max_pieces "9999999999"
 props_break_max_pieces_perframe "999999999"
 r_3dsky "1"
