--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -11,6 +11,7 @@ echo "nr_debug_cull_deferred_code_lights_via_bsp 1 is default value"
 echo "nr_debug_cull_deferred_lights 1 is default value"
 echo "nr_gbuffer_for_secondary_cams_quality 5 is INSANE value, 6 is DevOnly(UnCompressed)"
 echo "nr_lights_quality 5 is INSANE value, 6 is DevOnly(UnCompressed)"
+echo "nr_shadow_filter_quality 3 is INSANE value, 2 is High"
 
 exec config.cfg
 
@@ -201,6 +202,7 @@ nr_gbuffer_for_refraction_enabled "1"
 nr_gbuffer_for_secondary_cams_enabled "1"
 nr_gbuffer_for_secondary_cams_quality "6"
 nr_lights_quality "6"
+nr_shadow_filter_quality "3"
 
 props_break_max_pieces "9999999999"
 props_break_max_pieces_perframe "999999999"
