--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -203,7 +203,9 @@ nr_gbuffer_for_secondary_cams_enabled "1"
 nr_gbuffer_for_secondary_cams_quality "6"
 nr_lights_quality "6"
 nr_shadow_filter_quality "3"
-
+nr_shadow_quality "4"
+nr_shadow_res "0"
+nr_shadow_res_dkvk "0"
 props_break_max_pieces "9999999999"
 props_break_max_pieces_perframe "999999999"
 r_3dsky "1"
