--- a/Black Mesa/autoexecHQ.cfg
+++ b/Black Mesa/autoexecHQ.cfg
@@ -148,6 +148,7 @@ mat_camerarendertargetoverlaysize "8192"
 mat_disable_bloom "0"
 mat_disable_fancy_blending "0"
 mat_disable_lightwarp "0"
+mat_easymenu_quality_level "5"
 mat_envmapsize "8192"
 mat_envmaptgasize "8192"
 mat_forceaniso "16"
@@ -176,6 +177,7 @@ mat_specular "1"
 mat_texture_reload_frame_swap_workaround "0"
 mat_tonemapping_occlusion_use_stencil "1"
 mat_trilinear "1"
+mat_unlock_gfx_highend_unsupported "1"
 mat_vsync "0"
 mat_wateroverlaysize "8192"
 mod_load_anims_async "1"
