--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -156,6 +156,7 @@ net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
 
+r_3dsky "1"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
 r_decals "4096"
