--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -156,6 +156,7 @@ net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
 
+r_3dsky "0"
 r_cheapwaterend "0.1"
 r_cheapwaterstart "0.1"
 r_decals "0"
