--- a/Day of Defeat: Source/autoexecPRO.cfg
+++ b/Day of Defeat: Source/autoexecPRO.cfg
@@ -161,6 +161,7 @@ net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
+r_3dsky "0"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
 r_decals "300"
