--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -154,6 +154,7 @@ net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
 name "TyranT🜨"
+r_3dsky "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
