--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -104,6 +104,7 @@ net_maxroutable "1260"
 net_maxpacketdrop "0"
 portal_viewmodel_use_dlight "1"
 portal_transmit_light "1"
+r_3dsky "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
