--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -157,6 +157,7 @@ net_maxpacketdrop "0"
 mp_decals "999999999999999999999999999"
 name "TyranT🜨"
 portal_draw_ghosting "1"
+r_3dsky "1"
 r_avglight "999999999999999999999999999"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
