--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -69,6 +69,7 @@ cl_software_cursor "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "67"
 con_enable "1"
+datacachesize "1024"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
 engine_no_focus_sleep "0"
