--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -71,6 +71,7 @@ cl_threaded_bone_setup "1"
 cl_threaded_client_leaf_system "1"
 cl_wpn_sway_interp "0"
 con_enable "1"
+datacachesize "1024"
 decalfrequency "1"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
