--- a/Day of Defeat: Source/autoexecHQ.cfg
+++ b/Day of Defeat: Source/autoexecHQ.cfg
@@ -70,6 +70,7 @@ cl_software_cursor "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "67"
 con_enable "1"
+datacachesize "1024"
 dod_playachievementsound "1"
 dod_playrivalrysounds "1"
 dod_playwinmusic "1"
