--- a/Day of Defeat: Source/autoexecPERF.cfg
+++ b/Day of Defeat: Source/autoexecPERF.cfg
@@ -71,6 +71,7 @@ cl_software_cursor "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "67"
 con_enable "1"
+datacachesize "1024"
 dod_playachievementsound "0"
 dod_playrivalrysounds "0"
 dod_playwinmusic "0"
