--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -69,6 +69,7 @@ cl_threaded_bone_setup "0"
 cl_threaded_client_leaf_system "1"
 cl_updaterate "128"
 con_enable "1"
+datacachesize "1024"
 default_fov "102"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
