--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -82,6 +82,8 @@ fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
 fog_enable "0"
+fog_enable_water_fog "0"
+fog_enableskybox "0"
 fps_max "999"
 fx_drawimpactdebris "0"
 fx_drawimpactdust "0"
