--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -82,6 +82,8 @@ filesystem_max_stdio_read "64"
 flex_rules "1"
 flex_smooth "1"
 fog_enable "1"
+fog_enable_water_fog "1"
+fog_enableskybox "1"
 fps_max "999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
