--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -80,6 +80,9 @@ flex_smooth "1"
 fast_fogvolume "0"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
+fog_enable "1"
+fog_enable_water_fog "1"
+fog_enableskybox "1"
 fov_desired "90"
 fps_max "999"
 fx_drawimpactdebris "1"
