--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -40,6 +40,10 @@ con_enable "1"
 datacachesize "1024"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
+engine_no_focus_sleep "0"
+fog_enable "1"
+fog_enable_water_fog "1"
+fog_enableskybox "1"
 flex_rules "1"
 flex_smooth "1"
 fast_fogvolume "0"
