--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -79,6 +79,9 @@ filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
 flex_rules "0"
 flex_smooth "0"
+fog_enable "0"
+fog_enable_water_fog "0"
+fog_enableskybox "0"
 fov_desired "105"
 fps_max "999"
 fx_drawimpactdebris "0"
