--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -85,6 +85,7 @@ fog_enable "0"
 fog_enable_water_fog "0"
 fog_enableskybox "0"
 fps_max "999"
+func_break_max_pieces "0"
 fx_drawimpactdebris "0"
 fx_drawimpactdust "0"
 fx_drawmetalspark "0"
