--- a/Day of Defeat: Source/autoexecPRO.cfg
+++ b/Day of Defeat: Source/autoexecPRO.cfg
@@ -88,6 +88,7 @@ fog_enable_water_fog "0"
 fog_enableskybox "0"
 fov_desired "105"
 fps_max "999"
+func_break_max_pieces "0"
 fx_drawimpactdebris "0"
 fx_drawimpactdust "0"
 fx_drawmetalspark "0"
