--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -49,6 +49,7 @@ flex_smooth "1"
 fast_fogvolume "0"
 fps_max "999"
 fps_max_splitscreen "999"
+func_break_max_pieces "999999999"
 gameinstructor_enable "0"
 hud_fastswitch "1"
 joystick "0"
