--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -85,6 +85,7 @@ fog_enable_water_fog "1"
 fog_enableskybox "1"
 fov_desired "90"
 fps_max "999"
+func_break_max_pieces "999999999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
 fx_drawmetalspark "1"
