--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -108,6 +108,10 @@ hud_saytext_time "0"
 lzma_persistant_buffer "1"
 m_mousespeed "0"
 m_rawinput "1"
+m_customaccel "0"
+m_filter "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
 mat_aaquality "0"
 mat_alphacoverage "0"
 mat_antialias "0"
