--- a/Day of Defeat: Source/autoexecPERF.cfg
+++ b/Day of Defeat: Source/autoexecPERF.cfg
@@ -114,6 +114,8 @@ m_customaccel "0"
 m_filter "0"
 m_mousespeed "0"
 m_rawinput "1"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
 mat_aaquality "0"
 mat_alphacoverage "0"
 mat_antialias "0"
