--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -109,6 +109,9 @@ lzma_persistant_buffer "1"
 m_filter "0"
 m_mousespeed "0"
 m_rawinput "1"
+m_customaccel "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
 mat_aaquality "4"
 mat_alphacoverage "1"
 mat_antialias "8"
