--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -56,6 +56,9 @@ joystick "0"
 m_filter "0"
 m_mousespeed "0"
 m_rawinput "1"
+m_customaccel "0"
+m_mouseaccel1 "0"
+m_mouseaccel2 "0"
 mat_aaquality "4"
 mat_alphacoverage "1"
 mat_antialias "8"
