--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -129,6 +129,7 @@ mat_envmaptgasize "8192"
 mat_forceaniso "16"
 mat_forcemanagedtextureintohardware "0"
 mat_framebuffercopyoverlaysize "8192"
+mat_hdr_level "2"
 mat_levelflush "1"
 mat_max_worldmesh_vertices "999999999"
 mat_maxframelatency "0"
