--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -80,6 +80,7 @@ mat_forceaniso "16"
 mat_forcemanagedtextureintohardware "0"
 mat_framebuffercopyoverlaysize "8192"
 mat_grain_enable "0"
+mat_hdr_level "2"
 mat_levelflush "1"
 mat_max_worldmesh_vertices "999999999"
 mat_maxframelatency "0"
