--- a/SiN Gold/autoexecHQ.cfg
+++ b/SiN Gold/autoexecHQ.cfg
@@ -62,3 +62,20 @@ sv_maxbloodspats "999"
 sv_maxbulletholes "999"
 sv_precache "1"
 vid_fullscreen "1"
+
+bind 1 "use Fists"
+bind 2 "use Magnum"
+bind 3 "use Shotgun"
+bind 4 "use AssaultRifle"
+bind 5 "use Chaingun"
+bind 6 "use SpiderMine"
+bind 7 "use RocketLauncher"
+bind 8 "use PulseRifle"
+bind 9 "use QuantumDestabilizer"
+bind 0 "use SniperRifle"
+bind BACKSPACE "cmd wuss"
+alias toggleviewmode "cmd toggleviewmode"
+alias god "cmd superfuzz"
+alias noclip "nocollision"
+alias notarget "wallflower"
+developer 0
