--- a/SiN Gold/autoexecHQ.cfg
+++ b/SiN Gold/autoexecHQ.cfg
@@ -1,5 +1,6 @@
 echo "SiN Gold HQ CONFIG"
 echo "gl_shadows look bad"
+echo "gl_ext_palettedtexture 0 is 16bit textures, gl_ext_palettedtexture 1 is 8bit textures in Quake2 engine"
 
 cl_blend "1"
 cl_bulletholes "1"
