--- a/Kingpin: Life of Crime/autoexecHQ.cfg
+++ b/Kingpin: Life of Crime/autoexecHQ.cfg
@@ -48,3 +48,27 @@ gl_skymip "0"
 gl_specular "1"
 gl_swapinterval "0"
 gl_texturemode "GL_LINEAR"
+in_joystick "0"
+in_mouse "1"
+intensity "1"
+logfile "0"
+m_interpolate "0"
+maxentities "8192"
+maxrate "25000"
+noipx "1"
+r_brightteam "3"
+r_debug_lighting "0"
+r_detail_alpha "0.2"
+r_detail_dist "999999999"
+r_detail_scale "8.0"
+r_directional_lighting "1"
+r_hires "1"
+r_lightflares "1"
+r_maxfps "120"
+r_nocull "1"
+r_novis "0"
+r_painskins "2"
+rate "25000"
+s_async "1"
+s_khz "22"
+s_mixahead "0.045"
