--- a/Kingpin: Life of Crime/autoexecHQ.cfg
+++ b/Kingpin: Life of Crime/autoexecHQ.cfg
@@ -72,3 +72,12 @@ rate "25000"
 s_async "1"
 s_khz "22"
 s_mixahead "0.045"
+
+alias   zoom "s1a;s1b"
+alias   unzoom "s2a;s2b"
+
+alias s1a fov "65"
+alias s2a fov "90"
+
+alias s1b bind mouse3 "unzoom"
+alias s2b bind mouse3 "zoom"
