--- a/Kingpin: Life of Crime/autoexecHQ.cfg
+++ b/Kingpin: Life of Crime/autoexecHQ.cfg
@@ -1,5 +1,6 @@
 echo "Kingpin HQ CONFIG"
 echo "gl_ext_palettedtexture 0 is 16bit textures, gl_ext_palettedtexture 1 is 8bit textures in Quake2 engine"
+echo "in_mouse 2 is raw input enabled"
 
 allow_download "0"
 cl_adjustfov "1"
@@ -49,7 +50,7 @@ gl_specular "1"
 gl_swapinterval "0"
 gl_texturemode "GL_LINEAR"
 in_joystick "0"
-in_mouse "1"
+in_mouse "2"
 intensity "1"
 logfile "0"
 m_interpolate "0"
