--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -3,6 +3,7 @@ echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
 echo "cpu_speed needs to match cpu freqency in MHz"
 echo "cpu_memory needs to match video card memory amount in MBs"
 echo "logfile 2 to create console log"
+echo "gl_ext_palettedtexture 0 is 16bit textures, gl_ext_palettedtexture 1 is 8bit textures in Quake2 engine"
 
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
@@ -58,6 +59,7 @@ set gl_effectfill "10000"
 set gl_ext_anisotropic "1"
 set gl_ext_multitexture "1"
 set gl_ext_swapinterval "0"
+set gl_ext_palettedtexture "0"
 set gl_fogmode "0"
 set gl_gentextures_broken "0"
 set gl_picmip "0"
