--- a/Anachronox/autoexecHQ.cfg
+++ b/Anachronox/autoexecHQ.cfg
@@ -1,7 +1,7 @@
 echo "Anachronox HQ CONFIG"
 echo "ALT+SHIFT+F10 to enable console in game"
 echo "logfile is saved and named 0"
-echo "gl_ext_palettedtexture 0 is 16bit textures, gl_ext_palettedtexture 1 is 8bit textures in Quake2 engine"
+echo "gl_ext_palettedtexture is NOT in SoF"
 
 cl_beams "1"
 cl_particles "1"
