--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -3,7 +3,7 @@ echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
 echo "cpu_speed needs to match cpu freqency in MHz"
 echo "cpu_memory needs to match video card memory amount in MBs"
 echo "logfile 2 to create console log"
-echo "gl_ext_palettedtexture 0 is 16bit textures, gl_ext_palettedtexture 1 is 8bit textures in Quake2 engine"
+echo "gl_ext_palettedtexture is NOT in SoF"
 
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
