Update and rename autoexec.cfg to autoexecSOFTHQ.cfg

--- a/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
@@ -1,7 +1,9 @@
+echo "HEXEN 2 SOFTWARE RENDER CONFIG"
+
 m_filter "0"
 joystick "0"
-sensitivity "2.91"
-_snd_mixahead "0.05"
+sensitivity "4"
+_snd_mixahead "0.045"
 precache "1"
 d_mipscale "0"
 d_mipcap "0"
