--- a/Half-Life/userconfigHQ.cfg
+++ b/Half-Life/userconfigHQ.cfg
@@ -11,6 +11,10 @@ echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to pr
 echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom spray"
 echo "DONT USE hud_deathnotice_time 0 (5 default), hard to know if you get wallbangs or nade kills"
 echo "hud_saytext_internal 1 and hud_saytext_time 1 (5 default) to enable chat text"
+echo "gl_flashblend 0 higher quality, 1 is for performance"
+echo "gl_affinemodels 0 is higher quality models"
+echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
+echo "r_skyalpha 1 is default value"
 
 _snd_mixahead "0.045"
 ati_npatch "0"
