--- a/Quake/ezquake/autoexecHQ.cfg
+++ b/Quake/ezquake/autoexecHQ.cfg
@@ -1,3 +1,9 @@
+echo "EZQUAKE OGL HQ CONFIG"
+echo "gl_flashblend 0 higher quality, 1 is for performance"
+echo "gl_affinemodels 0 is higher quality models"
+echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
+echo "r_skyalpha 1 is default value"
+
 allow_download "0"
 allow_download_demos "0"
 allow_download_maps "0"
