--- a/Quake/ezquake/autoexecPERF.cfg
+++ b/Quake/ezquake/autoexecPERF.cfg
@@ -1,4 +1,4 @@
-echo "EZQUAKE PERF CONFIG"
+echo "EZQUAKE OGL PERF CONFIG"
 echo "gl_flashblend 0 higher quality, 1 is for performance"
 echo "gl_affinemodels 0 is higher quality models"
 echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
