--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -20,6 +20,8 @@ gl_affinemodels "0"
 gl_smoothmodels "1"
 gl_texture_anisotropy "16"
 gl_texturemode "GL_LINEAR"
+gl_multitexture "1"
+gl_texture_NPOT "1"
 gl_picmip "0"
 gl_cull
 m_filter "0"
@@ -36,4 +38,6 @@ r_shadows "0"
 r_drawviewmodel "1"
 r_waterwarp "1"
 r_lightmap "0"
+snd_noextraupdate "1"
 sys_ticrate "10000"
+vid_wait "0"
