--- a/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
@@ -8,8 +8,21 @@ precache "1"
 d_mipscale "0"
 d_mipcap "0"
 d_subdiv16 "0"
-r_dynamic "1"
 fov "90"
 fov_adapt "0"
 sys_ticrate "10000"
 r_transwater "1"
+r_novis "1"
+r_skyalpha "1.0"
+r_wateralpha "0.7"
+r_mirroralpha "1"
+r_slimealpha "0.7"
+r_lavaalpha "0.666"
+r_shadows "0"
+r_dynamic "1"
+r_drawviewmodel "1"
+r_waterwarp "1"
+r_lightmap "0"
+snd_noextraupdate "1"
+sys_ticrate "10000"
+vid_wait "0"
