--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -23,7 +23,7 @@ gl_texturemode "GL_LINEAR"
 gl_multitexture "1"
 gl_texture_NPOT "1"
 gl_picmip "0"
-gl_cull
+gl_cull "0"
 m_filter "0"
 precache "1"
 sensitivity "4"
