--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -1,8 +1,9 @@
 echo "HEXEN2 OGL HQ CONFIG"
 echo "gl_flashblend 0 higher quality, 1 is for performance"
-echo "gl_affinemodels 0 is higher quality models"
+echo "gl_affinemodels 0 is higher quality models, 1 is performance"
 echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
 echo "r_skyalpha 1 is default value"
+echo "gl_texture_NPOT 1 for hq textures, 0 for performance"
 
  _snd_mixahead "0.045"
 gl_coloredlight "1"
