--- a/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecSOFTHQ.cfg
@@ -1,16 +1,20 @@
 echo "HEXEN 2 SOFTWARE RENDER CONFIG"
+echo "gl_flashblend 0 higher quality, 1 is for performance"
+echo "gl_affinemodels 0 is higher quality models, 1 is performance"
+echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
+echo "r_skyalpha 1 is default value"
+echo "gl_texture_NPOT 1 for hq textures, 0 for performance"
 
+_snd_mixahead "0.045"
 m_filter "0"
 joystick "0"
 sensitivity "4"
-_snd_mixahead "0.045"
 precache "1"
 d_mipscale "0"
 d_mipcap "0"
 d_subdiv16 "0"
 fov "90"
 fov_adapt "0"
-sys_ticrate "10000"
 r_transwater "1"
 r_novis "1"
 r_skyalpha "1.0"
