--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -2,7 +2,8 @@ echo "HEXEN2 OGL HQ CONFIG"
 echo "gl_flashblend 0 higher quality, 1 is for performance"
 echo "gl_affinemodels 0 is higher quality models, 1 is performance"
 echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
-echo "r_skyalpha 1 is default value"
+echo "r_skyalpha 0.67 is default value"
+echo "r_wateralpha 0.33 is default value"
 echo "gl_texture_NPOT 1 for hq textures, 0 for performance"
 
  _snd_mixahead "0.045"
@@ -27,11 +28,10 @@ gl_picmip "0"
 gl_cull "0"
 m_filter "0"
 precache "1"
-sensitivity "4"
 r_novis "1"
 r_dynamic "1"
-r_skyalpha "1.0"
-r_wateralpha "0.7"
+r_skyalpha "0.67"
+r_wateralpha "0.33"
 r_mirroralpha "1"
 r_slimealpha "0.7"
 r_lavaalpha "0.666"
@@ -39,6 +39,9 @@ r_shadows "0"
 r_drawviewmodel "1"
 r_waterwarp "1"
 r_lightmap "0"
+sensitivity "4"
+snow_active "1"
+snow_flurry "1"
 snd_noextraupdate "1"
 sys_ticrate "10000"
 vid_wait "0"
