--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -5,6 +5,7 @@ echo "r_mirroralpha 1 is reflective textures on, 0 is off for performance"
 echo "r_skyalpha 0.67 is default value"
 echo "r_wateralpha 0.33 is default value"
 echo "gl_texture_NPOT 1 for hq textures, 0 for performance"
+echo "vid_maxpages 3 is triple buffering, vid_maxpages 2 is double buffering"
 
  _snd_mixahead "0.045"
 gl_coloredlight "1"
@@ -14,7 +15,7 @@ gl_other_glows "1"
 gl_missile_glows "1"
 gl_glows "1"
 gl_keeptjunctions "1"
-gl_waterripple "1"
+gl_waterripple "2"
 gl_playermip "0"
 gl_flashblend "0"
 gl_polyblend "1"
@@ -44,4 +45,5 @@ snow_active "1"
 snow_flurry "1"
 snd_noextraupdate "1"
 sys_ticrate "10000"
+vid_maxpages "2"
 vid_wait "0"
