--- a/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
+++ b/Hexen II/Hammer of Thyrion/autoexecOGLHQ.cfg
@@ -27,6 +27,7 @@ gl_multitexture "1"
 gl_texture_NPOT "1"
 gl_picmip "0"
 gl_cull "0"
+gl_lightmapfmt "GL_RGBA"
 m_filter "0"
 precache "1"
 r_novis "1"
