--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -1,5 +1,8 @@
 echo "crippling depression"
 echo "never use fps_max 0, increases latency"
+echo "cl_hide_avatar_images"
+echo "cl_allow_animated_avatars"
+echo "r_drawtracers_firstperson 0"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
