--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -28,6 +28,7 @@ cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
 engine_low_latency_sleep_after_client_tick "1"
+engine_no_focus_sleep "0"
 fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
