--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -58,6 +58,7 @@ snd_toolvolume "1"
 snd_headphone_eq "0"
 snd_voipvolume "0.5"
 snd_mixahead "0.001"
+sv_maxunlag "0"
 rate "1048576"
 ui_vanitysetting_team "ct"
 ui_vanitysetting_loadoutslot_ct "rifle1"
