--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -4,6 +4,7 @@ echo "cl_hide_avatar_images"
 echo "cl_allow_animated_avatars"
 echo "r_drawtracers_firstperson 0"
 echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
+echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
