--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -6,6 +6,7 @@ echo "r_drawtracers_firstperson 0"
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy"
 echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
+echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -28,6 +29,7 @@ cl_radar_square_with_scoreboard "0"
 cl_showloadout "1"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
+cl_tickpacket_recvmargin_enable "0"
 cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
