--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -3,7 +3,7 @@ echo "never use fps_max 0, increases latency"
 echo "cl_hide_avatar_images"
 echo "cl_allow_animated_avatars"
 echo "r_drawtracers_firstperson 0"
-echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy"
+echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0"
 echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands"
