--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -7,10 +7,12 @@ echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strateg
 echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands"
+echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
 cl_clock_recvmargin_enable "0"
+cl_cq_min_queue "-1"
 cl_debounce_zoom "0"
 cl_hide_avatar_images "1"
 cl_hud_color "1"
