--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -35,6 +35,9 @@ cl_tickpacket_recvmargin_enable "0"
 cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
+cq_buffer_bloat_msecs "0"
+cq_buffer_bloat_msecs_max "0"
+cq_min_queue_size "0"
 engine_low_latency_sleep_after_client_tick "1"
 engine_no_focus_sleep "0"
 fps_max "999"
@@ -65,6 +68,7 @@ snd_toolvolume "1"
 snd_headphone_eq "0"
 snd_voipvolume "0.5"
 snd_mixahead "0.001"
+sv_clockcorrection_msecs "0"
 sv_maxunlag "0"
 rate "1048576"
 ui_vanitysetting_team "ct"
