--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -37,7 +37,10 @@ clientport "65007"
 con_enable "1"
 cq_buffer_bloat_msecs "0"
 cq_buffer_bloat_msecs_max "0"
+cq_logging "0"
+cq_logging_interval "0"
 cq_min_queue_size "0"
+cq_print_every_command "0"
 engine_low_latency_sleep_after_client_tick "1"
 engine_no_focus_sleep "0"
 fps_max "999"
