--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -39,6 +39,7 @@ cq_buffer_bloat_msecs "0"
 cq_buffer_bloat_msecs_max "0"
 cq_logging "0"
 cq_logging_interval "0"
+cq_max_starved_substitute_commands "0"
 cq_min_queue_size "0"
 cq_print_every_command "0"
 engine_low_latency_sleep_after_client_tick "1"
@@ -72,6 +73,9 @@ snd_headphone_eq "0"
 snd_voipvolume "0.5"
 snd_mixahead "0.001"
 sv_clockcorrection_msecs "0"
+sv_cq_trim_bloat_remainder "0"
+sv_cq_trim_bloat_space "0"
+sv_cq_trim_catchup_remainder "0"
 sv_maxunlag "0"
 rate "1048576"
 ui_vanitysetting_team "ct"
