--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -23,6 +23,7 @@ cl_hud_telemetry_ping_show "0"
 cl_hud_telemetry_serverrecvmargin_graph_show "0"
 cl_net_buffer_ticks "0"
 cl_obs_interp_enable "0"
+cl_obs_interp_pos_rate "0"
 cl_player_ping_mute "1"
 cl_playerspraydisable "1"
 cl_radar_always_centered "0"
