--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -12,6 +12,7 @@ echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to dec
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
 cl_clock_recvmargin_enable "0"
+cl_clock_recvmargin_spew_interval "0"
 cl_cq_min_queue "-1"
 cl_debounce_zoom "0"
 cl_hide_avatar_images "1"
