--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -13,19 +13,26 @@ cl_allow_animated_avatars "0"
 cl_autohelp "0"
 cl_clock_recvmargin_enable "0"
 cl_clock_recvmargin_spew_interval "0"
+cl_connectionretrytime_p2p "0"
 cl_cq_min_queue "-1"
 cl_debounce_zoom "0"
+cl_disable_deathcam_audio_mix_fade_out "1"
 cl_hide_avatar_images "1"
+cl_http_log_enable "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
 cl_hud_telemetry_frametime_show "0"
 cl_hud_telemetry_net_misdelivery_show "0"
 cl_hud_telemetry_ping_show "0"
 cl_hud_telemetry_serverrecvmargin_graph_show "0"
+cl_input_enable_raw_keyboard "1"
+cl_join_advertise "0"
+cl_joystick_enabled "0"
 cl_net_buffer_ticks "0"
 cl_obs_interp_enable "0"
 cl_obs_interp_pos_rate "0"
 cl_player_ping_mute "1"
+cl_player_ragdolls_collide "0"
 cl_playerspraydisable "1"
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
