--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -34,13 +34,16 @@ cl_obs_interp_pos_rate "0"
 cl_player_ping_mute "1"
 cl_player_ragdolls_collide "0"
 cl_playerspraydisable "1"
+cl_prefer_lefthanded "0"
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "0"
 cl_showloadout "1"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
+cl_tickpacket_desired_queuelength "0"
 cl_tickpacket_recvmargin_enable "0"
+cl_tickpacket_recvmargin_spew_interval "0"
 cl_use_opens_buy_menu "0"
 clientport "65007"
 con_enable "1"
