--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -8,6 +8,7 @@ echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 s
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands"
 echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size"
+echo "cl_ragdoll_limit: maximum number of ragdolls to display, -1 disables the limit"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -38,6 +39,7 @@ cl_prefer_lefthanded "0"
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "0"
+cl_ragdoll_limit "0"
 cl_showloadout "1"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
