--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression"
+echo "r_show_build_info"
 echo "never use fps_max 0, increases latency"
 echo "cl_hide_avatar_images"
 echo "cl_allow_animated_avatars"
