--- a/Quake/rerelease/autoexecINTERP.cfg
+++ b/Quake/rerelease/autoexecINTERP.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression interp performance"
+echo "r_rhirenderfamily: vulkan / d3d11"
 
 aa_interpolaterate "0"
 aa_allowinterpolate "0"
