--- a/Turok/autoexec.cfg
+++ b/Turok/autoexec.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression quality"
+echo "r_rhirenderfamily: opengl / d3d11"
 
 cl_maxfps "999"
 cl_mousesmooth "0"
@@ -11,7 +12,7 @@ r_bloom "1"
 r_fxaa "0"
 r_lightscatter "1"
 r_rhimaxanisotropic "16"
-r_rhirenderfamily "d3d11"
+r_rhirenderfamily "opengl"
 r_saturation "1"
 r_simpleactorshadows "1"
 r_water_reflection "1"
