--- a/Turok 2: Seeds of Evil/autoexec.cfg
+++ b/Turok 2: Seeds of Evil/autoexec.cfg
@@ -20,7 +20,7 @@ r_useocclusionquery "1"
 r_resolutionscale "0"
 r_resolutionscale_aggressive "0"
 r_rhimaxanisotropic "16"
-r_rhirenderfamily "d3d11"
+r_rhirenderfamily "opengl"
 r_saturation "1"
 r_screenspacemotionblur "0"
 r_shadowmaps "1"
