--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -6,8 +6,8 @@ echo "cl_allow_animated_avatars"
 echo "r_drawtracers_firstperson 0"
 echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
-echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size"
 echo "cl_ragdoll_limit: maximum number of ragdolls to display, -1 disables the limit"
+echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size / LOCKED @ 0"
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0 / REMOVED"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 
