--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -27,6 +27,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
+echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 
 
@@ -47,7 +48,7 @@ cl_customsounds "0"
 cl_detaildist "999999999999999999999999999"
 cl_detailfade "999999999999999999999999999"
 cl_disablehtmlmotd "1"
-cl_downloadfilter "mapsonly"
+cl_downloadfilter "nosounds"
 cl_ejectbrass "1"
 cl_forcepreload "1"
 cl_interp "0.01"
