--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -6,6 +6,7 @@ echo "cl_interp 0.03 for 33tic servers"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
+echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 echo "unlimited ragdolls and enhanced sound enabled"
 
@@ -22,7 +23,7 @@ cl_crosshair_green "250"
 cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_debugrumble "0"
-cl_downloadfilter "all"
+cl_downloadfilter "nosounds"
 cl_forcepreload "1"
 cl_interp "0.1"
 cl_interp_ratio "1"
