--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -19,6 +19,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
+echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 
 
@@ -42,7 +43,7 @@ cl_customsounds "0"
 cl_detaildist "999999999999999999999999999"
 cl_detailfade "999999999999999999999999999"
 cl_disablehtmlmotd "1"
-cl_downloadfilter "none"
+cl_downloadfilter "nosounds"
 cl_dynamiccrosshair "0"
 cl_ejectbrass "1"
 cl_hud_minmode "0"
