--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -20,6 +20,7 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
+echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 
 
@@ -43,7 +44,7 @@ cl_customsounds "0"
 cl_detaildist "1"
 cl_detailfade "1"
 cl_disablehtmlmotd "1"
-cl_downloadfilter "none"
+cl_downloadfilter "mapsonly"
 cl_dynamiccrosshair "0"
 cl_ejectbrass "0"
 cl_hud_minmode "1"
