--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -31,7 +31,7 @@ echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 
 
-echo "ragdolls, water, dynamic lights, and c4 dynamic light are enabled for FUN config"
+echo "ragdolls, water, dynamic lights, c4 dynamic light, and (cl_downloadfilter all) are enabled for FUN config"
 
 
 
