--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -23,7 +23,7 @@ echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 
 
 
-echo "ragdolls, ragdoll collide, new impact effects, burning gibs, water, shadows, and dynamic light enabled for HQ config"
+echo "ragdolls, ragdoll collide, new impact effects, burning gibs, water, shadows, dynamic light, and (cl_downloadfilter nosounds) are enabled for HQ config"
 
 
 
