--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -29,7 +29,8 @@ echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Inser
 echo "r_novis 1 causes missing props in HL2"
 echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
 echo "mat_antialias (0-8): 0x to 8x MSAA"
-echo "mat_aaquality (0-4): 
+echo "mat_aaquality (0-4): CSAA = Coverage Sampling Anti Aliasing / DONT USE"
+
 
 
 echo "ragdolls, water, dynamic lights, c4 dynamic light, and (cl_downloadfilter all) are enabled for FUN config"
