--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -28,6 +28,8 @@ echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
 echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
+echo "mat_antialias (0-8): 0x to 8x MSAA"
+echo "mat_aaquality (0-4): CSAA = Coverage Sampling Anti Aliasing / DONT USE"
 
 
 
