--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -10,6 +10,7 @@ echo "cl_ragdoll_limit: maximum number of ragdolls to display, -1 disables the l
 echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size / LOCKED @ 0"
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0 / REMOVED"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
+echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -63,6 +64,9 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+r_csgo_cmaa_enable "0"
+r_csgo_cmaa_extra_sharp "0"
+r_csgo_cmaa_quality "0"
 r_drawtracers "1"
 r_drawtracers_firstperson "0"
 r_player_visibility_mode "0"
