--- a/Day of Defeat: Source/autoexecHQ.cfg
+++ b/Day of Defeat: Source/autoexecHQ.cfg
@@ -19,6 +19,8 @@ echo "r_hunkalloclightmaps 0 to fix Engine Hunk Overflow error, occurs often in 
 echo "cl_new_impact_effects 1 only works in TF2"
 echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Insertion in HL2"
 echo "r_novis 1 causes missing props in HL2"
+echo "mat_antialias (0-8): 0x to 8x MSAA"
+echo "mat_aaquality (0-4): CSAA = Coverage Sampling Anti Aliasing / DONT USE"
 
 
 
