--- a/Portal/autoexecHQ.cfg
+++ b/Portal/autoexecHQ.cfg
@@ -25,9 +25,15 @@ echo "cl_threaded_bone_client 1 causes buggy broom vortigaunt during Point Inser
 echo "r_novis 1 causes missing props in HL2"
 echo "Half-Life: Source compatible"
 echo "cl_interp 0.01 causes stuttering models in HL2/HL:S, must use cl_interp 0.1"
+echo "mat_antialias (0-8): 0x to 8x MSAA"
+echo "mat_aaquality (0-4): CSAA = Coverage Sampling Anti Aliasing / DONT USE"
+
+
 
 echo "sv_cheats 1 enables ULTRA HQ video settings, also disables achievements"
 sv_cheats "1"
+
+
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -113,7 +119,7 @@ m_rawinput "1"
 m_customaccel "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
-mat_aaquality "4"
+mat_aaquality "0"
 mat_alphacoverage "1"
 mat_antialias "8"
 mat_bufferprimitives "1"
