--- a/Portal 2/autoexecHQ.cfg
+++ b/Portal 2/autoexecHQ.cfg
@@ -1,6 +1,10 @@
 echo "PORTAL 2 HIGH QUALITY CONFIG"
 echo "THE BLOBULATOR"
 echo "cl_updaterate 30 and cl_cmdrate 60 is max for Portal 2"
+echo "mat_antialias (0-8): 0x to 8x MSAA"
+echo "mat_aaquality (0-4): CSAA = Coverage Sampling Anti Aliasing / DONT USE"
+
+
 
 cl_allowdownload "0"
 cl_allowupload "0"
@@ -59,7 +63,7 @@ m_rawinput "1"
 m_customaccel "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
-mat_aaquality "4"
+mat_aaquality "0"
 mat_alphacoverage "1"
 mat_antialias "8"
 mat_bufferprimitives "1"
