--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -11,6 +11,7 @@ echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to dec
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0 / REMOVED"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
+echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -28,7 +29,7 @@ cl_hud_telemetry_frametime_show "0"
 cl_hud_telemetry_net_misdelivery_show "0"
 cl_hud_telemetry_ping_show "0"
 cl_hud_telemetry_serverrecvmargin_graph_show "0"
-cl_input_enable_raw_keyboard "1"
+cl_input_enable_raw_keyboard "0"
 cl_join_advertise "0"
 cl_joystick_enabled "0"
 cl_net_buffer_ticks "0"
