--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,1 +1,14 @@
-poop
+cl_fixedFPS "999"
+cl_engineHZ "60"
+cl_swapjoysticks "0"
+cl_usegyros "0"
+cl_updateCPUUsageFrequency "1"
+r_ambientOcculusion "3"
+r_filmgrain "0"
+udp_allowipv6 "0"
+r_motionblur "0"
+in_nojoy "1"
+v_vsync "0"
+net_voip "0"
+net_voipmic "0"
+net_voipptt "0"
