--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,10 +1,14 @@
+cc_enable "0"
+g_autoaim "2"
 cl_fixedFPS "999"
 cl_engineHZ "60"
 cl_swapjoysticks "0"
 cl_usegyros "0"
 cl_updateCPUUsageFrequency "1"
+r_resolutionscale "0"
 r_ambientOcculusion "3"
 r_filmgrain "0"
+udp_allowipv4 "0"
 udp_allowipv6 "0"
 r_motionblur "0"
 in_nojoy "1"
