--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,5 +1,10 @@
 cc_enable "0"
 g_autoaim "2"
+g_subtitlesGameplay "0"
+g_subtitlesCutscenes "0"
+g_difficulty "3"
+g_tutorials "1"
+g_oldschoolaim "0"
 cl_fixedFPS "999"
 cl_engineHZ "60"
 cl_swapjoysticks "0"
@@ -13,6 +18,8 @@ udp_allowipv6 "0"
 r_motionblur "0"
 in_nojoy "1"
 v_vsync "0"
+v_windowmode "2"
+v_refresh "60"
 net_voip "0"
 net_voipmic "0"
 net_voipptt "0"
