--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,4 +1,9 @@
+unbind space CROUCH
+bind lctrl CROUCH
 cc_enable "0"
+g_togglewalk "0"
+g_togglecrouch "0"
+g_toggleaim "0"
 g_autoaim "2"
 g_subtitlesGameplay "0"
 g_subtitlesCutscenes "0"
