--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,30 +1,42 @@
 unbind space CROUCH
 bind lctrl CROUCH
-cc_enable "0"
-g_togglewalk "0"
-g_togglecrouch "0"
-g_toggleaim "0"
-g_autoaim "2"
-g_subtitlesGameplay "0"
-g_subtitlesCutscenes "0"
-g_difficulty "3"
-g_tutorials "1"
-g_oldschoolaim "0"
-cl_fixedFPS "999"
-cl_engineHZ "60"
-cl_swapjoysticks "0"
-cl_usegyros "0"
-cl_updateCPUUsageFrequency "1"
-r_resolutionscale "0"
-r_ambientOcculusion "3"
-r_filmgrain "0"
-udp_allowipv4 "0"
-udp_allowipv6 "0"
-r_motionblur "0"
-in_nojoy "1"
-v_vsync "0"
-v_windowmode "2"
-v_refresh "60"
-net_voip "0"
-net_voipmic "0"
-net_voipptt "0"
+seta cc_enable "0"
+seta g_togglewalk "0"
+seta g_togglecrouch "0"
+seta g_toggleaim "0"
+seta g_autoaim "2"
+seta g_subtitlesGameplay "0"
+seta g_subtitlesCutscenes "0"
+seta g_difficulty "3"
+seta g_tutorials "1"
+seta g_oldschoolaim "0"
+seta cl_fixedFPS "999"
+seta cl_engineHZ "60"
+seta cl_swapjoysticks "0"
+seta cl_usegyros "0"
+seta cl_updateCPUUsageFrequency "1"
+seta r_resolutionscale "0"
+seta r_ambientOcculusion "3"
+seta r_filmgrain "0"
+seta udp_allowipv4 "0"
+seta udp_allowipv6 "0"
+seta r_motionblur "0"
+seta in_nojoy "1"
+seta v_vsync "0"
+seta v_windowmode "2"
+seta v_refresh "60"
+seta net_voip "0"
+seta net_voipmic "0"
+seta net_voipptt "0"
+
+seta cl_joysmoothing "0"
+seta r_ao_effectRadius "0"
+seta r_ao_sharpness "0"
+seta r_ao_detailStrength "0"
+seta r_ao_blurpasscount "0"
+seta r_bloom "0"
+seta r_dof "0"
+seta r_tonemapping "1"
+seta r_antialiasing "7"
+seta r_spec_power "1"
+seta r_gloss_power "256"
