--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,3 +1,7 @@
+echo "The Thing: Remastered HQ Config"
+echo "r_tonemapping is Color Grading"
+echo "r_ao* is Ambient Occulsion settings"
+
 unbind space CROUCH
 bind lctrl CROUCH
 seta cc_enable "0"
@@ -30,10 +34,6 @@ seta net_voipmic "0"
 seta net_voipptt "0"
 
 seta cl_joysmoothing "0"
-seta r_ao_effectRadius "0"
-seta r_ao_sharpness "0"
-seta r_ao_detailStrength "0"
-seta r_ao_blurpasscount "0"
 seta r_bloom "0"
 seta r_dof "0"
 seta r_tonemapping "1"
