--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,5 +1,5 @@
 echo "The Thing: Remastered HQ Config"
-echo "r_tonemapping is Color Grading"
+echo "r_tonemapping is Color Grading, washes out colors"
 echo "r_ao* is Ambient Occulsion settings"
 
 unbind space CROUCH
@@ -36,7 +36,7 @@ seta net_voipptt "0"
 seta cl_joysmoothing "0"
 seta r_bloom "0"
 seta r_dof "0"
-seta r_tonemapping "1"
+seta r_tonemapping "0"
 seta r_antialiasing "7"
 seta r_spec_power "1"
 seta r_gloss_power "256"
