--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -1,6 +1,7 @@
 echo "The Thing: Remastered HQ Config"
-echo "r_tonemapping is Color Grading, washes out colors"
+echo "r_tonemapping is Color Grading, 0 fixes washes out colors"
 echo "r_ao* is Ambient Occulsion settings"
+echo "r_spec_power 0 removes ugly white shine and washed out lights"
 
 unbind space CROUCH
 bind lctrl CROUCH
@@ -38,5 +39,5 @@ seta r_bloom "1"
 seta r_dof "0"
 seta r_tonemapping "0"
 seta r_antialiasing "7"
-seta r_spec_power "1"
+seta r_spec_power "0"
 seta r_gloss_power "256"
