--- a/Marvel Rivals/Scalability.ini
+++ b/Marvel Rivals/Scalability.ini
@@ -1,4 +1,5 @@
 ;By VIPMACTEP | 2.4 | Ultra Potato | No Enemy Outlines | 27 Feb 2025, 9:56AM
+;ShadingQuality controls "black hair"
 ;%LOCALAPPDATA%\Marvel\Saved\Config\Windows
 [ScalabilitySettings]
 
